# A-PythonicHackathon-CLI

./: .env.example  README.md  main_multiple-line.py  main_single-line.py  musicLibraries.py  pyproject.toml  requirements-dev.txt  sagar_assistant.py  sagar_cli.py
.github/workflows/: ci.yml
tests/: test_handle_command.py
